Various fixes of formatting and typo issues in the documentation
Bugzilla #200

--- a/doc/user_guide/tex/genom-generation.tex
+++ b/doc/user_guide/tex/genom-generation.tex
@@ -132,7 +132,7 @@ The \texttt{C}  source code    of  this  library  can be   found  in
 \texttt{demoMsgLib.c}.  The header
 file \texttt{demoMsgLib.h}, which must  be included by clients, contains the
 definitions for the server identification and communication establishment
-(name and size of the mailbox, function prototypes\ldots).
+(name and size of the mailbox, function prototypes, \ldots).
 
 To use this  library, you must link your  program with  
 \texttt{-ldemoClient}. 
@@ -145,7 +145,7 @@ and display   functions).  The same    structure as above  is used:
 \texttt{demoPosterLib.c} is  the  source code. 
 \texttt{demoPosterLib.h}   defines the name  of  the
 posters along  with  their data structures and prototypes of access
-funtions.
+functions.
 The  \emph{cIDS} structure is
 also defined there\footnote{the structures included by the \emph{cIDS} are
 defined in the file \texttt{modules.h}, located in the genom source tree.}.
