--- a/doc/user_guide/tex/genom-syntax.tex
+++ b/doc/user_guide/tex/genom-syntax.tex
@@ -92,7 +92,7 @@ The sub-commands of \texttt{Request} are the following.\\
 \item[]\texttt{type:  control}, \texttt{exec} or \texttt{init} defines the type of the request:
   \begin{itemize}
   \item \texttt{control}: for a control request; control requests do not
-    trigger any specific action. they are mostly used for accessing the
+    trigger any specific action. They are mostly used for accessing the
     internal database (reading or changing parameters),
   \item \texttt{exec}: for an execution request; execution requests trigger
     (periodic or not) actions defined into execution codels,
