Update the documentation for the python generation

--- a/doc/user_guide/tex/genom-anx-files.tex
+++ b/doc/user_guide/tex/genom-anx-files.tex
@@ -83,6 +83,13 @@ in the codels}). \\
  \multicolumn{2}{l}{} \\
 
  \hline
+ \multicolumn{2}{|l|}{Python :} \\
+ \hline
+ \texttt{struct.py}  &  ctypes python interface to manipulate structure\\
+ \hline
+ \multicolumn{2}{l}{} \\
+
+ \hline
  \multicolumn{2}{|l|}{OpenPRS:} \\
  \hline
  \texttt{openprs/}  & \\
