--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+133. Redo the instance name cache.
+132. Fix a bunch of generated prototypes after conversion to taskSpawn2()
+131. Quote $CC in MKDEP invocation, in case $CC expands to multiple words.
+130. OpenPRS support ameliorations (Felix Ingrand)
+
 Genom 2.10, October 24, 2012.
 
 129. Add a genom option (-y) to generate code for python
