--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+134. Let the perl program be configurable via the PERL environment variable
 133. Redo the instance name cache.
 132. Fix a bunch of generated prototypes after conversion to taskSpawn2()
 131. Quote $CC in MKDEP invocation, in case $CC expands to multiple words.
