--- a/doc/slides/genom-slides.tex
+++ b/doc/slides/genom-slides.tex
@@ -271,7 +271,7 @@ and \textbf{perenity})
 
 \begin{center}  \textbf{$\rightarrow$ data flow}  \end{center}
 
-\texttt{pocolibs} (\url{http://pocolibs.openrobots.org/})
+\texttt{pocolibs} (\url{https://www.openrobots.org/wiki/pocolibs})
 
 \end{frame}
 
@@ -1730,6 +1730,6 @@ gdhe)}	or \textbf{OpenPRS}
 % LocalWords:  pdfsubject pdftitle pdfkeywords matthieu doc Fleury Herrb Codels
 % LocalWords:  adam jpg bis lapa lama jidowanki rackham dala neobotix cont gen
 % LocalWords:  genom pdf png msgLib moduleRqst posterLib modulePoster pocolibs
-% LocalWords:  softs laas fr openrobots fonctionmt codels usr PKG ONFIG ATH cd
+% LocalWords:  softs laas fr openrobots  codels usr PKG ONFIG ATH cd
 % LocalWords:  demoStruct autoconf autotools demoXxxCodels setq alist autoload
 % LocalWords:  mkdir RQST
