--- a/doc/user_guide/tex/genom-configuration.tex
+++ b/doc/user_guide/tex/genom-configuration.tex
@@ -100,7 +100,7 @@ Notes:
 
 A more extensive and largely incomplete (!) documentation is also
 available
-online\footnote{\url{http://softs.laas.fr/openrobots/robotpkg/README.html}},
+online\footnote{\url{http://robotpkg.openrobots.org/}},
 or in the \texttt{doc/robotpkg} directory of robotpkg. 
 
 If you successfully installed GenoM with robotpkg, you can skip to the
@@ -146,7 +146,7 @@ GenoM is part of a suite of open-sources tools.
 
 In order to install and use GenoM you will have to download and install
 the following libraries and tools from  
-\texttt{http://softs.laas.fr/openrobots/} :
+\texttt{https://git.openrobots.org/} :
 
 \begin{itemize}
 \item \texttt{mkdep}: LAAS tool to determine dependencies
