Recode using UTF-8

--- a/doc/user_guide/genom.tex
+++ b/doc/user_guide/genom.tex
@@ -47,7 +47,7 @@
 \fi\fi
 \makeatother
 
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 
 \title{\fontsize{40}{40}\bf\GenoM\\\vskip1cm\Huge User's Guide}
 \author{Sara Fleury, Matthieu Herrb, Anthony Mallet \\
@@ -55,11 +55,11 @@ CNRS ; LAAS \\
 7, Av. du Colonel Roche\\
 F-31077 Toulouse, France\\
 \\
-Université de Toulouse; UPS; INSA; INP; ISAE; LAAS; F-31077 Toulouse France\\
+UniversitÃ© de Toulouse; UPS; INSA; INP; ISAE; LAAS; F-31077 Toulouse France\\
 \\
 \url{{sara.fleury,matthieu.herrb,anthony.mallet}@laas.fr}}
 
-\date{September 2013}
+\date{May 2015}
 
 \begin{document}
 
